--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity
             android:name="MapsActivity"
             android:label="MapsActivity"/>
+        <activity
+            android:name="InputGallery"
+            android:label="InputGallery"/>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBa4mg_G3F1CgZ1S4n4VAGjysD7as57yCk"/>
